# dep_provider_simple

./: .gitmodules  CMakeLists.txt
cmake/: dp_submodule.cmake  my_dp_provider.cmake
